日常批量更新 | auto commit